fix: update role-based access control for various endpoints and clean up code formatting